# Alexandrite

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sbt  build.ys
src/main/scala/: ALU.scala  BrCond.scala  Config.scala  CoreUnit.scala  ExUnit.scala  ForwardController.scala  IdWbUnit.scala  IfUnit.scala  ImmGen.scala  InstructionDecorder.scala  Instructions.scala  MainRegister.scala  MemUnit.scala  MemoryIo.scala  RegFile.scala
test/: CMakeLists.txt  asmcompile.bash  link.ld  util.S
test/cfib/: CMakeLists.txt  cfibtest.c  sim4cfibtest.cpp
test/fibonacchi/: CMakeLists.txt  a.out  fibtest.S  sim4fibtest.cpp
test/loadimmediate/: CMakeLists.txt  litest.S  sim4litest.cpp
